--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -83,6 +83,7 @@
 	"txt-comment-none": "Not Use Example",
 	"txt-comment-new": "New Example",
 	"txt-edit-msg": "Really Edit ?",
+	"txt-statistics": "Statistics",
 
 	"accident":{
 		"1": "Web Attack",
