--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -84,6 +84,7 @@
 	"txt-comment-none": "不使用範本",
 	"txt-comment-new": "新範本",
 	"txt-edit-msg": "是否確認編輯 ?",
+	"txt-statistics": "統計",
 
 	"accident": {
 		"1": "網頁攻擊",
