--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -170,7 +170,8 @@
 		"3": "送審事件單",
 		"4": "結案",
 		"5": "新增事件單",
-		"6": "修改事件單"
+		"6": "修改事件單",
+		"7": "轉分析人員"
 	},
 	"protectType": {
 		"0": "防毒軟體",
