--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -161,7 +161,9 @@
 		"2": "待審核",
 		"3": "結案(未發布)",
 		"4": "已發布",
-		"5": "已刪除"
+		"5": "已刪除",
+		"6": "待交辦分析",
+		"7": "待處理"
 	},
 	"action": {
 		"0": "全部",
