add executor transfer button

--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -89,6 +89,7 @@
 	"txt-incident-expired": "逾期事件單",
 	"txt-incident-unhandled": "未處理事件單",
 	"txt-incident-mine": "我的事件單",
+	"txt-transfer": "轉單",
 
 	"accident": {
 		"1": "網頁攻擊",
