--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -88,6 +88,7 @@
 	"txt-incident-expired": "Expired",
 	"txt-incident-unhandled": "Unhandled",
 	"txt-incident-mine": "Mine",
+	"txt-transfer": "Transfer",
 
 	"accident":{
 		"1": "Web Attack",
