--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -89,6 +89,7 @@
 	"txt-incident-unhandled": "Unhandled",
 	"txt-incident-mine": "Mine",
 	"txt-transfer": "Transfer",
+	"txt-day": "Day",
 
 	"accident":{
 		"1": "Web Attack",
