--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -90,6 +90,7 @@
 	"txt-incident-unhandled": "未處理事件單",
 	"txt-incident-mine": "我的事件單",
 	"txt-transfer": "轉單",
+	"txt-day": "天",
 
 	"accident": {
 		"1": "網頁攻擊",
