Add datetime logic and list sort functionality for Host page. Update tree count with comma.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -155,6 +155,9 @@
   "txt-result": "結果",
   "txt-total": "總數",
   "txt-maxScore": "最高分",
+  "txt-sort": "排序",
+  "txt-asc": "升序",
+  "txt-desc": "降序",
   "txt-maxDataMsg": "資料筆數最大為10,000筆",
   "txt-es-data-over-limit": "超出搜尋範圍，請修改查詢條件",
   "txt-duplicatedName": "名稱不得重複",
