--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -155,6 +155,9 @@
   "txt-result": "Result",
   "txt-total": "Total",
   "txt-maxScore": "max. score",
+  "txt-sort": "Sort",
+  "txt-asc": "Ascending",
+  "txt-desc": "Descending",
   "txt-maxDataMsg": "The maximum data count is 10,000",
   "txt-es-data-over-limit": "Exceed max queried number, please revise filters",
   "txt-duplicatedName": "Name is duplicated",
