--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -268,13 +268,14 @@
   "host": {
     "txt-hostList": "主機列表",
     "txt-deviceMap": "裝置地圖",
+    "txt-hostInfo": "主機資訊",
     "txt-viewInfo": "查看內容",
     "txt-hostList2": "主機清單",
     "txt-hostAnalysis": "主機分析資訊",
     "txt-hostCreateTime": "評估時間",
-    "txt-isNotHmd": "未安裝HMD",
-    "txt-isLatestVersion": "最新版本HMD",
-    "txt-isOldVersion": "未升版HMD",
+    "txt-isNotHmd": "未安裝",
+    "txt-isLatestVersion": "最新版",
+    "txt-isOldVersion": "未升版",
     "txt-isOwnerNull": "未設定使用者",
     "txt-isAreaNull": "未設定樓層",
     "txt-isSeatNull": "未設定座位"
@@ -443,7 +444,7 @@
     "txt-longitude": "經度",
     "txt-latitude": "緯度",
     "txt-activatTime": "啟用時間",
-    "txt-lastUpateTime": "最近更新時間",
+    "txt-lastUpdateTime": "最近更新時間",
     "txt-anyTime": "不限時段",
     "txt-customTime": "自訂時段",
     "txt-memo": "備忘錄",
@@ -479,14 +480,14 @@
     "txt-severityMapping": "情資嚴重等級管理",
     "txt-addSeverityTable": "新增類型",
     "txt-typeInfo": "類型內容",
-    "txt-lastUpateTime": "最近更新時間",
+    "txt-lastUpdateTime": "最近更新時間",
     "txt-severityMissing": "嚴重等級類型不得為空白"
   },
 
   "system-defined-pattern": {
     "txt-addPatternScript": "新增Pattern",
     "txt-patternInfo": "Pattern內容",
-    "txt-lastUpateTime": "最近更新時間",
+    "txt-lastUpdateTime": "最近更新時間",
     "txt-patternMissing": "Pattern名稱不得為空白",
     "txt-queryScriptMissing": "查詢條件不得為空白",
     "txt-deletePattern": "$t(txt-delete)Pattern"
