Implement the ES Management page for Config.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -186,6 +186,9 @@
   "txt-productInfo": "Product Information",
   "txt-issuesFeedback": "Feedback",
 
+  "txt-esManage": "ES Management",
+  "txt-importEsIndex": "Import Index",
+
   "txt-edge": "Edge",
   "txt-threatIntelligence": "Threat Intelligence",
   "txt-addDepartment": "Add Department",
