--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -186,6 +186,9 @@
   "txt-productInfo": "產品資訊",
   "txt-issuesFeedback": "問題回報",
 
+  "txt-esManage": "ES管理",
+  "txt-importEsIndex": "匯入索引",
+
   "txt-edge": "Edge",
   "txt-threatIntelligence": "威脅情資",
   "txt-addDepartment": "新增部門",
