--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -65,6 +65,11 @@
   "-5008": "系統服務預設埠號不允許使用",
   "-5009": "Log主機IP不存在",
 
+  "-7000": "ES索引列表讀取失敗",
+  "-7001": "開啟ES索引失敗",
+  "-7002": "關閉ES索引失敗",
+  "-7003": "刪除ES索引失敗",
+
   "txt-param-null": "參數為空",
   "txt-account-fail": "無法由AD獲取帳號資訊",
 
