Begin and complete the Config Audit Log page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -188,6 +188,7 @@
 
   "txt-esManage": "ES Management",
   "txt-importEsIndex": "Import Index",
+  "txt-auditLog": "Audit Log",
 
   "txt-edge": "Edge",
   "txt-threatIntelligence": "Threat Intelligence",
