--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -535,6 +535,13 @@
     "storeSize": "Store Size(MB)",
     "priStoreSize": "Primary Store Size(MB)"
   },
+  "auditFields": {
+    "projectId": "Projcect ID",
+    "message": "Message",
+    "level": "Level",
+    "creator": "Creator",
+    "createDttm": "Datetime"
+  },
   "serviceStatusFields": {
     "status": "Status",
     "serviceName": "Service Name"
