--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -188,6 +188,7 @@
 
   "txt-esManage": "ES管理",
   "txt-importEsIndex": "匯入索引",
+  "txt-auditLog": "Audit Log",
 
   "txt-edge": "Edge",
   "txt-threatIntelligence": "威脅情資",
