--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -188,7 +188,7 @@
 
   "txt-esManage": "ES管理",
   "txt-importEsIndex": "匯入索引",
-  "txt-auditLog": "Audit Log",
+  "txt-auditLog": "稽核紀錄",
 
   "txt-edge": "Edge",
   "txt-threatIntelligence": "威脅情資",
