--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -125,6 +125,7 @@
   "txt-analyze": "Analyze",
   "txt-send": "Send",
   "txt-networkBehavior": "Network Behavior",
+  "txt-executableInfo": "Executable Info",
   "txt-logSource": "Log Source",
   "txt-indicator": "Indicator",
   "txt-online": "Online",
@@ -147,12 +148,16 @@
   "txt-host": "Host",
   "txt-group": "Group",
   "txt-settings": "Settings",
-  "txt-setting-eng": "Setting",
+  "txt-setting-eng": "Settings",
   "txt-item": "Item",
   "txt-score": "Score",
   "txt-text": "Text",
   "txt-result": "Result",
+  "txt-total": "Total",
   "txt-maxScore": "max. score",
+  "txt-sort": "Sort",
+  "txt-asc": "Ascending",
+  "txt-desc": "Descending",
   "txt-maxDataMsg": "The maximum data count is 10,000",
   "txt-es-data-over-limit": "Exceed max queried number, please revise filters",
   "txt-duplicatedName": "Name is duplicated",
@@ -160,6 +165,7 @@
   "txt-threatsSrcCountryRank": "Source Country Alert Rank",
 
   "txt-dashboard": "Dashboard",
+  "txt-host": "Host",
   "txt-threats": "Threats",
   "txt-syslog": "Syslog",
   "txt-netflow": "Netflow",
@@ -179,6 +185,10 @@
   "txt-networkInventory": "Network Inventory",
   "txt-productInfo": "Product Information",
   "txt-issuesFeedback": "Feedback",
+
+  "txt-esManage": "ES Management",
+  "txt-importEsIndex": "Import Index",
+  "txt-auditLog": "Audit Log",
 
   "txt-edge": "Edge",
   "txt-threatIntelligence": "Threat Intelligence",
@@ -257,6 +267,22 @@
     "txt-hmd": "HMD",
     "txt-max": "Max",
     "txt-hosts": "Hosts"
+  },
+
+  "host": {
+    "txt-hostList": "Host List",
+    "txt-deviceMap": "Device Map",
+    "txt-hostInfo": "Host Info",
+    "txt-viewInfo": "View Info",
+    "txt-hostList2": "Host",
+    "txt-hostAnalysis": "Host Analysis Info",
+    "txt-hostCreateTime": "Create Date Time",
+    "txt-isNotHmd": "Not Installed",
+    "txt-isLatestVersion": "Latest Version",
+    "txt-isOldVersion": "Not Upgraded",
+    "txt-isOwnerNull": "No Owner",
+    "txt-isAreaNull": "No Area",
+    "txt-isSeatNull": "No Seat"
   },
 
   "alert": {
@@ -422,7 +448,7 @@
     "txt-longitude": "Longitude",
     "txt-latitude": "Latitude",
     "txt-activatTime": "Datetime",
-    "txt-lastUpateTime": "Last Update Time",
+    "txt-lastUpdateTime": "Last Update Time",
     "txt-anyTime": "Any Time",
     "txt-customTime": "Custom Time",
     "txt-memo": "Memo",
@@ -458,14 +484,14 @@
     "txt-severityMapping": "Threat Severity Mapping",
     "txt-addSeverityTable": "Add Type",
     "txt-typeInfo": "Type Info",
-    "txt-lastUpateTime": "Last Update Time",
+    "txt-lastUpdateTime": "Last Update Time",
     "txt-severityMissing": "Severity type cannot be empty"
   },
 
   "system-defined-pattern": {
     "txt-addPatternScript": "Add Pattern",
     "txt-patternInfo": "Pattern Info",
-    "txt-lastUpateTime": "Last Update Time",
+    "txt-lastUpdateTime": "Last Update Time",
     "txt-patternMissing": "Pattern cannot be empty",
     "txt-queryScriptMissing": "Query Script cannot be empty",
     "txt-deletePattern": "$t(txt-delete) Pattern"
@@ -543,7 +569,8 @@
       "txt-scanFile": "Malware",
       "txt-gcb": "GCB",
       "txt-ir": "IR",
-      "txt-fileIntegrity": "File Integrity"
+      "txt-fileIntegrity": "File Integrity",
+      "txt-procMonitor": "Process Monitor"
     },
     "ir-type": {
       "txt-quick": "Quick IR",
@@ -567,6 +594,19 @@
       "txt-list14": "Video Search",
       "txt-list15": "Microsoft File Search",
       "txt-list16": "Keyword File Search"
+    },
+    "executable-list": {
+      "txt-_AutorunLocation": "Autorun Location",
+      "txt-_CommandLine": "Command Line",
+      "txt-_CompanyName": "Company Name",
+      "txt-_Filepath": "File Path",
+      "txt-_Filesize": "File Size",
+      "txt-_MD5": "MD5",
+      "txt-_SHA1" : "SHA1",
+      "txt-_SHA256": "SHA256",
+      "txt-_IsPE": "PE File",
+      "txt-_OwnerSID": "User SID",
+      "txt-_Signatures": "Signature"
     }
   },
 
@@ -694,6 +734,7 @@
     "ip": "IP",
     "mac": "MAC",
     "owner": "Owner",
+    "floorName": "Floor Name",
     "userAccount": "User Account",
     "userName": "User",
     "disks": "$t(txt-disks)",
