Remove import-index file. Fix bug for File Integration retrigger.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -188,6 +188,7 @@
 
   "txt-esManage": "ES Management",
   "txt-importEsIndex": "Import Index",
+  "txt-esImportMsg": "Please enter the date of the index to import",
   "txt-auditLog": "Audit Log",
 
   "txt-edge": "Edge",
