Add Exclude Path for Malware detection. Add error msg for testing email.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -416,8 +416,7 @@
     "txt-recipientEmail": "Recipient Email",
     "txt-notifyEmail": "Notify Email Address",
     "txt-emailInvalid": "Please enter correct email address",
-    "txt-sendSuccess": "Email has been sent successfully",
-    "txt-sendFail": "Email delivery failed"
+    "txt-sendSuccess": "Email has been sent successfully"
   },
 
   "edge-management": {
