--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -49,6 +49,7 @@
   "-9001": "Owner ID is duplicated",
 
   "-13": "Please set the valid Agent end time",
+  "-1000": "Couldn't connect to host, port: aaa.bb, 25; timeout -1",
   "-1001": "Please fill out all the required fields",
   "-1002": "User already exists.",
   "-1004": "password must contain at least one lower-case alphabet/upper-case alphabet/digital/special character and have length more than 12.",
