--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -416,8 +416,7 @@
     "txt-recipientEmail": "收件者郵件信箱",
     "txt-notifyEmail": "通知郵件信箱",
     "txt-emailInvalid": "請輸入正確email",
-    "txt-sendSuccess": "寄送成功",
-    "txt-sendFail": "寄送失敗"
+    "txt-sendSuccess": "寄送成功"
   },
 
   "edge-management": {
