--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -397,6 +397,7 @@
   "notifications": {
     "txt-testEmails": "寄信測試",
     "txt-settings": "通知設定",
+    "txt-sync": "同步情資",
     "txt-emailSettings": "Email設定",
     "txt-serviceNotifications": "服務通知設定",
     "txt-edgeNotifications": "Edge設備通知設定",
