Add 'add to settings' funcitonality for HMD Process Monitor.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -541,6 +541,7 @@
     "txt-reCheck": "Re-check",
     "txt-reCompress": "Re-compress",
     "txt-yaraRules": "Yara Rules",
+    "txt-addToSettings": "Add to Settings",
     "txt-passCount": "Pass",
     "txt-totalItem": "Total",
     "txt-total": "Total upload count",
