Continue work on the form material-ui conversion for SCP.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -6,6 +6,7 @@
 
   "txt-on": "On",
   "txt-off": "Off",
+  "txt-switch": "Switch",
   "txt-ok": "OK",
   "txt-time": "Time",
   "txt-date": "Date",
