--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -366,7 +366,7 @@
       "txt-addQuery": "新增查詢條件",
       "txt-noSavedQuery": "查無儲存條件",
       "txt-noOpenQuery": "查詢條件名稱不得為空白",
-      "txt-threasholdMax": "統整次數不得大於1,000",
+      "txt-threasholdCount": "統整次數不得大於1,000或小於0",
       "txt-addPatternScript": "定義告警條件",
       "txt-patternQuery1": "統整",
       "txt-patternQuery2": "分鐘資料，超過或等於",
@@ -626,6 +626,7 @@
     "txt-fromSeat": "從$t(txt-seat)",
     "txt-selected-node": "選擇樓層節點",
     "txt-ipValidationFail": "請輸入正確IP格式",
+    "txt-macValidationFail": "請輸入正確MAC格式",
     "txt-seatNameEmpty": "請輸入座位名稱",
     "txt-saveSuccess": "儲存成功",
 
