Add conditional dialog for ES Management page. Convert login and resetPwd pages to Material UI form. Various bugs fix.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -482,6 +482,11 @@
     }
   },
 
+  "es-management": {
+    "txt-exportMsg": "Index will be deleted after the export is done. Are you sure you want to proceed?",
+    "txt-turnOffMsg": "Are you sure you want to turn the index off"
+  },
+
   "threat-severity-mapping": {
     "txt-severityMapping": "Threat Severity Mapping",
     "txt-addSeverityTable": "Add Type",
