--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -14,7 +14,6 @@
 	"txt-incident-ttps": "攻擊手法",
 	"txt-prev-page": "上一頁",
 	"txt-next-page": "下一頁",
-	"txt-draw": "抽單",
 	"txt-audit": "審核",
 	"txt-audit-success": "審核成功",
 	"txt-audit-fail": "審核失敗",
@@ -34,12 +33,15 @@
 	"txt-send": "發布",
 	"txt-send-success": "發布成功",
 	"txt-send-fail": "發布失敗",
+	"txt-send-msg": "是否發布",
 	"txt-return": "退單",
 	"txt-return-success": "退單成功",
 	"txt-return-fail": "退單失敗",
 	"txt-return-msg": "是否退單",
+	"txt-draw": "抽單",
 	"txt-draw-msg": "是否抽單",
-	"txt-send-msg": "是否發布",
+	"txt-draw-success": "抽單成功",
+	"txt-draw-fail": "抽單失敗",
 	"txt-sendCheck": "，是否直接發布?",
 	"txt-sendCheckHealth": "是否手動發布健康狀態統計單?",
 	"txt-send-status": "發布狀態",
@@ -89,7 +91,11 @@
 	"txt-incident-expired": "逾期事件單",
 	"txt-incident-unhandled": "未處理事件單",
 	"txt-incident-mine": "我的事件單",
-	"txt-transfer": "轉單",
+	"txt-transfer": "交辦分析人員",
+	"txt-analyze": "交辦分析",
+	"txt-analyze-msg": "是否交辦分析",
+	"txt-analyze-success": "交辦成功",
+	"txt-analyze-fail": "交辦失敗",
 	"txt-day": "天",
 
 	"accident": {
