fixed soc error test

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -97,7 +97,7 @@
 	"txt-analyze-success": "Assign Success",
 	"txt-analyze-fail": "Assign Fail",
 	"txt-day": "Day",
-
+	"file-too-large": "Upload file over limit，limit is 20MB",
 	"accident":{
 		"1": "Web Attack",
 		"11": "Web Defacement",
