fixed and change incident metarial-ui and incident_device

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -65,7 +65,9 @@
 	"txt-ttp-obs-uri": "Malicious URI",
 	"txt-ttp-obs-socket": "Malicious IP",
 	"txt-srcIp": "Source IP",
-	"txt-autoSend": "Monthly Auto",
+	"txt-autoSendSettings": "Auto-Send Settings",
+	"txt-autoSendState": "Auto-Send Status",
+	"txt-autoSend": "Is auto send to NCCST when the fourth of every month",
 	"txt-mustOne": "must required one malicious info",
 	"txt-attachedFile": "Attached File",
 	"txt-attachedFileNameError": "Attached File Name exist special characters",
