--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -65,7 +65,9 @@
 	"txt-ttp-obs-uri": "惡意URI",
 	"txt-ttp-obs-socket": "惡意IP連線",
 	"txt-srcIp": "來源IP",
-	"txt-autoSend": "每月自動發布",
+	"txt-autoSendSettings": "自動發布設定",
+	"txt-autoSendState": "自動發布狀態",
+	"txt-autoSend": "是否每月4號自動發布給NCCST",
 	"txt-mustOne": "擇一惡意資訊必填",
 	"txt-attachedFile": "附加檔案",
 	"txt-attachedFileNameError": "附加檔案名稱存在特殊字元",
