Update Material UI styles for LMS page. Fix various bugs based on QA's feedback.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -260,7 +260,7 @@
   },
   "alertFields": {
     "_tableMenu_": "",
-    "_eventDttm_": "Event Datetime",
+    "_eventDttm_": "Alert Datetime",
     "lastPacket": "Last Packet",
     "destIp": "Destination IP",
     "srcIp": "Source IP",
